package ch.heigvd.mcr.project.mediator.strategies;


/**
 * Class representing an Idle strategy in the simulation.
 * An IdleStrategy is a movement strategy where an entity does not move.
 * @author REDACTED
 * @author REDACTED
 * @author Surdez Quentin
 */
public class IdleStrategy implements MovementStrategy{

    /**
     * Executes the Idle strategy.
     * In this strategy, the entity does not move.
     */
    public void executeStrategy(){
        //does nothing
    }

}
