@startuml

' STATIC
' Generated by CTP - https://github.com/samuelroland/ctp

' Style
hide empty members
hide circle
skinparam classAttributeIconSize 0

' Additions

' REMOVE

' ENDSTATIC

abstract class ObjectiveStrategy {
	# ant: Ant
	+ {abstract}getRange(): int
	+ executeStrategy(): void
}


class IdleStrategy {
	+ executeStrategy(): void
}

interface MovementStrategy {
	~ executeStrategy(): void
}

class FleeingStrategy {
	- ant: Ant
	+ executeStrategy(): void
}



class PredatorStrategy {
	- predator: Predator
	+ executeStrategy(): void
}


class AttackStrategy {
	- entity: Entity
	+ executeStrategy(): void
}


class ObjectiveResourceStrategy {
	+ getRange(): int
}

class ObjectiveHomeStrategy {
	+ getRange(): int
}

class ScoutingStrategy {
	- ant: Ant
	+ executeStrategy(): void
}

MovementStrategy <|.. ObjectiveStrategy
MovementStrategy <|.. IdleStrategy
MovementStrategy <|.. FleeingStrategy
MovementStrategy <|.. PredatorStrategy
MovementStrategy <|.. AttackStrategy
ObjectiveStrategy <|-- ObjectiveResourceStrategy
ObjectiveStrategy <|-- ObjectiveHomeStrategy
MovementStrategy <|.. ScoutingStrategy

@enduml